httpserver/ingress/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
  name: httpserver-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
    k8s.sunjc.io/version: 1.0.0
  name: httpserver-deployment
  namespace: httpserver
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s.sunjc.io/instance: httpserver
      k8s.sunjc.io/name: httpserver
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s.sunjc.io/instance: httpserver
        k8s.sunjc.io/name: httpserver
    spec:
      containers:
        - name: httpserver-deployment
          image: k8s.sunjc.io/httpserver:1.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - [ "/bin/sh","-c","httpserver -s quit; while killall -0 httpserver; do sleep 1; done" ]
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              hostPort: 443
              name: https
              protocol: TCP
            - containerPort: 8443
              name: webhook
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
    k8s.sunjc.io/version: 1.0.0
  name: httpserver-svc-ip
  namespace: httpserver
spec:
  ports:
    - appProtocol: https
      name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
    k8s.sunjc.io/version: 1.0.0
  name: httpserver-ingress
spec:
  controller: k8s.io/httpserver
