httpserver/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
    k8s.sunjc.io/version: 1.0.0
  name: httpserver--svc-np
  namespace: httpserver
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
    - appProtocol: https
      name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
    k8s.sunjc.io/version: 1.0.0
  name: httpserver-svc-ip
  namespace: httpserver
spec:
  ports:
    - appProtocol: https
      name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    k8s.sunjc.io/instance: httpserver
    k8s.sunjc.io/name: httpserver
  type: ClusterIP
